# fsio

./: .coveragerc  .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yaml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/scripts/: check-branch-name.sh  check-changed-file.sh  check-changelog-has-version.sh  check_version_bump.py
.github/workflows/: check-changelog.yaml  check-version-upgraded.yaml  enforce-branch-naming.yaml  publish-docs.yaml  python-publish.yaml  python-publish.yml  run-tests.yaml
code/cli/api/: index.html
code/core/api/: index.html
docs/: index.md
docs/code/cli/: api.md
docs/code/core/: api.md
search/: search_index.json
src/fsio/cli/: program.py
src/fsio/core/: detect_type.py  file_type.py
tests/cli/: test_cli_program.py
tests/core/: test_core_detect_type.py  test_core_file_type.py
tests/core/data/: example.avro  example.ext.bz2  example.orc  example.parquet  example.xlsx
